--- a/learning_notes/templates/learning_notes/base.html
+++ b/learning_notes/templates/learning_notes/base.html
@@ -1,3 +1,56 @@
+<style>
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 8px 10px;
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+
+.submit { /* for confirming, submitting, or any positive action */
+    background-color: white; 
+    color: #4CAF50; 
+    border: 2px solid green; /* Green */
+}
+.submit:hover {
+    background-color: green; /* Green */
+    color: white;
+}
+
+.delete { /* for deleting or any negative/warning action */
+    background-color: white; 
+    color: red; /* red */ 
+    border: 2px solid red; /* red */ 
+}
+.delete:hover {
+    background-color: red; /* red */ 
+    color: white;
+}
+
+.edit { /* for editing or any modification action */
+    background-color: white; 
+    color: orange; /* red */ 
+    border: 2px solid orange; /* red */ 
+}
+.edit:hover {
+    background-color: orange; /* red */ 
+    color: white;
+}
+
+.cancel { /* for canceling purpose */
+    background-color: white;
+    color: black;
+    border: 2px solid grey; /* black */
+}
+.cancel:hover {
+    background-color: grey; /* black */
+    color: white;
+}
+</style>
+
 <p>
     <a href = "{% url 'learning_notes:index' %}">Learning Notes</a> - 
     <a href = "{% url 'learning_notes:topics' %}">Topics</a>
