--- a/learning_notes/templates/learning_notes/topic.html
+++ b/learning_notes/templates/learning_notes/topic.html
@@ -9,10 +9,17 @@
                 <p><b>{{ entry.title}}</b></p>
                 <p>{{ entry.date_added|date:"M d, Y H : i" }}</p>
                 <p>{{ entry.text|linebreaks }}</p>
+                <p><form action = "{% url 'learning_notes:edit_entry' topic.id entry.id%}" method = 'GET'>
+                    <input type = 'submit' class = "button edit" value = 'Edit'>
+                    </form>
+                </p>
             </li>
         {% empty %}
             <li>No entry has been added for this topic yet.</li>
         {% endfor %}
     </ul>
-    <p><a href = "{% url 'learning_notes:new_entry' topic.id %}">Add new entry</a></p>
+    <br>
+    <form action = "{% url 'learning_notes:new_entry' topic.id %}" method = 'GET'>
+        <input type = 'submit' class = "button submit" value = 'Add New Entry'>
+    </form>
 {% endblock content %}
