--- a/learning_notes/templates/learning_notes/base.html
+++ b/learning_notes/templates/learning_notes/base.html
@@ -8,6 +8,9 @@
     font-size: 14px;
     cursor: pointer;
     transition-duration: 0.4s;
+    display: inline-block;
+    text-decoration: none;
+    font-family: "Verdana", Arial, sans-serif;
 }
 
 .submit { /* for confirming, submitting, or any positive action */
@@ -40,9 +43,19 @@
     color: white;
 }
 
+.add { /* for adding */
+    background-color: white; 
+    color: blue; /* red */ 
+    border: 2px solid blue; /* red */ 
+}
+.add:hover {
+    background-color: blue; /* red */ 
+    color: white;
+}
+
 .cancel { /* for canceling purpose */
     background-color: white;
-    color: black;
+    color: grey;
     border: 2px solid grey; /* black */
 }
 .cancel:hover {
