--- a/learning_notes/templates/learning_notes/new_topic.html
+++ b/learning_notes/templates/learning_notes/new_topic.html
@@ -1,10 +1,12 @@
 {% extends "learning_notes/base.html" %}
 
 {% block content %}
-    <p>Add a new topic:</p>
+    <p><h3>Add a new topic:</h3></p>
     <form action = "{% url 'learning_notes:new_topic'%}" method = 'POST'>
         {% csrf_token %}
         {{form.as_p}}
-        <input type = 'submit', value = 'Add Topic'>
+        <input type = 'submit' class = 'button submit' value = 'Add Topic'>
+
+        <a href = "{% url 'learning_notes:topics' %}" class = "button cancel">Cancel</a> <!-- cancel button -->
     </form>
 {% endblock content %}
