--- a/learning_notes/templates/learning_notes/base.html
+++ b/learning_notes/templates/learning_notes/base.html
@@ -1,15 +1,21 @@
 <style>
+div { /*use div tag to control the width of text display and how to wrap text*/
+    width: 600px; 
+    border: none;
+    word-wrap: break-word;
+}
+/* styling for all button */
 .button {
-    background-color: #4CAF50;
+    background-color: green;
     border: none;
     color: white;
-    padding: 8px 10px;
+    padding: 5px 7px;
     text-align: center;
     font-size: 14px;
     cursor: pointer;
     transition-duration: 0.4s;
     display: inline-block;
-    text-decoration: none;
+    text-decoration: none; /* no underine for the text in button */
     font-family: "Verdana", Arial, sans-serif;
 }
 
