--- a/learning_notes/templates/learning_notes/base.html
+++ b/learning_notes/templates/learning_notes/base.html
@@ -72,7 +72,13 @@ div { /*use div tag to control the width of text display and how to wrap text*/
 
 <p>
     <a href = "{% url 'learning_notes:index' %}">Learning Notes</a> - 
-    <a href = "{% url 'learning_notes:topics' %}">Topics</a>
+    <a href = "{% url 'learning_notes:topics' %}">Topics</a> - 
+    {% if user.is_authenticated %}
+        Hello, {{user.username}}
+    {% else %}
+        <a href = "{% url 'users:login' %}">Log in</a>
+    {% endif %}
+
 </p>
 
 {% block content%}{% endblock content%}
