--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,7 +11,7 @@
         <input type = 'submit' class = 'button submit' value = 'Log in'>
         
         <!-- this hidden input text is to pass the url value to the login view. There must be an access to the key 'next' in login view which takes its value as the url to go to after login succeeds-->
-        <input type = 'hidden' name = 'next' value = "{% url 'learning_notes:index' %}">
+        <input type = 'hidden' name = 'next' value = "{{ request.GET.next }}">
 
         <a href = "{% url 'learning_notes:index' %}" class = "button cancel">Cancel</a> <!-- cancel button -->
     </form>
