added archive_user_topics, its url, view, and template

--- a/learning_notes/templates/learning_notes/base.html
+++ b/learning_notes/templates/learning_notes/base.html
@@ -21,6 +21,7 @@ div { /*use div tag to control the width of text display and how to wrap text*/
     display: inline-block;
     text-decoration: none; /* no underine for the text in button */
     font-family: "Verdana", Arial, sans-serif;
+    margin-left: 10px;
 }
 
 .submit { /* for confirming, submitting, or any positive action */
