--- a/learning_notes/templates/learning_notes/topics.html
+++ b/learning_notes/templates/learning_notes/topics.html
@@ -8,6 +8,8 @@
             <li>No topic has been added yet.</li>
         {% endfor %}
     </ul>
-
-    <a href = "{% url 'learning_notes:new_topic' %}" class = "button add" >Add New Topic</a>
+    <br>
+    {% if user.is_authenticated %}
+        <a href = "{% url 'learning_notes:new_topic' %}" class = "button add" >Add New Topic</a>
+    {% endif %}
 {% endblock content %}
