--- a/learning_notes/templates/learning_notes/base.html
+++ b/learning_notes/templates/learning_notes/base.html
@@ -3,7 +3,7 @@ p.warning{
     color:red;
     font-size: 16px;
 }
-div { /*use div tag to control the width of text display and how to wrap text*/
+div { 
     width: 600px; 
     border: none;
     word-wrap: break-word;
