--- a/learning_notes/templates/learning_notes/base.html
+++ b/learning_notes/templates/learning_notes/base.html
@@ -3,7 +3,7 @@ p.warning{
     color:red;
     font-size: 16px;
 }
-div { 
+div { /* controls how the entry's text is displayed */
     width: 600px; 
     border: none;
     word-wrap: break-word;
