--- a/learning_notes/templates/learning_notes/index.html
+++ b/learning_notes/templates/learning_notes/index.html
@@ -1,5 +1,6 @@
 {% extends "learning_notes/base.html" %}
 
 {% block content %}
-    <p>Learning Notes help you keep track of the new knowledge you have acquired throughout your life-long journey. </p>
+    <p><b>liftncode</b> provides a Learning Notes app to help you keep track of the new knowledge you have acquired throughout your life-long learning journey. </p>
+    <p>Never stop LIFTing and CODEing!</p>
 {% endblock content %}
