--- a/learning_notes/templates/learning_notes/index.html
+++ b/learning_notes/templates/learning_notes/index.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <p><b>liftncode</b> provides a Learning Notes app to help you keep track of the new knowledge you have acquired throughout your life-long learning journey. </p>
-    <p>Never stop LIFTing and CODing!</p>
+    <p>Never stop LIFTING and CODING!</p>
 {% endblock content %}
