--- a/learning_notes/templates/learning_notes/topics.html
+++ b/learning_notes/templates/learning_notes/topics.html
@@ -1,15 +1,23 @@
 {% extends "learning_notes/base.html" %}
 
 {% block content %}
-    <ul>
-        {% for topic in topics %}
-            <li><h2><a href = "{% url 'learning_notes:topic' topic.id %}">{{ topic.text }}</a></h2></li>
-        {% empty %}
-            <li>No topic has been added yet.</li>
-        {% endfor %}
-    </ul>
-    <br>
-    {% if user.is_authenticated %}
-        <a href = "{% url 'learning_notes:new_topic' %}" class = "button add" >Add New Topic</a>
-    {% endif %}
+<div class="container topics">
+  <div class="list-group">
+    {% for topic in topics %}
+      <!-- Use button for the cursor hover effect and to include badge. Use location.href to make button function as an <a> tag -->
+      <button 
+        type="button"
+        class="list-group-item list-group-item-action d-flex justify-content-between align-items-center topicList"
+        onclick="location.href='{% url 'learning_notes:topic' topic.id %}'">
+        {{ topic.text }}<span class="badge badge-primary badge-pill">{{ topic.count }}</span>
+      </button>
+    {% empty %}
+      <button type="button" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center topicList">No topic has been added yet.</button>
+    {% endfor %}
+  </div>
+  <br>
+  {% if user.is_authenticated %}
+      <a href = "{% url 'learning_notes:new_topic' %}" class = "button add" >Add New Topic</a>
+  {% endif %}
+</div>
 {% endblock content %}
