--- a/learning_notes/static/learning_notes/css/mystyle.css
+++ b/learning_notes/static/learning_notes/css/mystyle.css
@@ -1,4 +1,10 @@
 /*My custom CSS*/
+#greetUser{
+    height: 1rem;
+    color: white;
+    padding-right: 1rem;
+}
+
 .jumbotron{
     background-color: rgba(204, 204, 204, 0.8);
 }
@@ -9,6 +15,7 @@
 
 .container.topics{
     padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
     width: 25rem;
     font-size: 30px;
 }
@@ -24,3 +31,11 @@ button.topicList:hover{
     background-color: rgba(51, 51, 51);
     color: rgba(204, 204, 204);
 }
+
+#addNewTopic{
+    padding-top: 2.5rem;
+
+}
+
+
+
