--- a/learning_notes/templates/learning_notes/topics.html
+++ b/learning_notes/templates/learning_notes/topics.html
@@ -12,12 +12,13 @@
         {{ topic.text }}<span class="badge badge-primary badge-pill">{{ topic.count }}</span>
       </button>
     {% empty %}
-      <button type="button" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center topicList">No topic has been added yet.</button>
+      <button type="button" class="list-group-item d-flex justify-content-between align-items-center topicList">No topic has been added yet.</button>
     {% endfor %}
   </div>
-  <br>
   {% if user.is_authenticated %}
-      <a href = "{% url 'learning_notes:new_topic' %}" class = "button add" >Add New Topic</a>
+    <div id="addNewTopic">
+      <a href = "{% url 'learning_notes:new_topic' %}" class="btn btn-primary btn-lg" role="button" >Add New Topic</a>
+    </div>
   {% endif %}
 </div>
 {% endblock content %}
