topic.html beautify done

--- a/learning_notes/templates/learning_notes/base.html
+++ b/learning_notes/templates/learning_notes/base.html
@@ -14,6 +14,9 @@
     <!-- Bootstrap CSS CDN-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     <!-- django's way of handling CSS (static files) -->
     {% load static %}
     <style>
@@ -34,9 +37,9 @@
 
       body{
         background-image: url({% static 'learning_notes/img/liftncode.png' %});
-        background-repeat: no-repeat;
+        background-repeat: repeat;
         background-position: center;
-        background-size: center;" 
+        background-size: contain;" 
       }
     </style>
 
