--- a/learning_notes/static/learning_notes/css/mystyle.css
+++ b/learning_notes/static/learning_notes/css/mystyle.css
@@ -1,4 +1,6 @@
 /*My custom CSS*/
+
+/*base.html*/
 #greetUser{
     height: 1rem;
     color: white;
@@ -13,6 +15,8 @@
     width: 80%;
 }
 
+
+/*topics.html*/
 .container.topics{
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
@@ -34,8 +38,39 @@ button.topicList:hover{
 
 #addNewTopic{
     padding-top: 2.5rem;
-
 }
 
 
+/*topic.html*/
+.container.topic{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+    width: 60rem;
+}
+
+.topic.topline{
+    padding-bottom: 1rem;
+}
+
+#topicName{
+    font-size: 40px;
+    padding-right: 3rem;
+}
+
+.addNewEntry{
+    margin-bottom: 15px;
+}
+
+.card{
+    margin-bottom: 30px;
+}
+
+a.entryOwner{
+    margin-right: 10px;
+    font-style: italic;
+}
+
+a.toTop{
+    font-size: 24px;
+}
 
