--- a/learning_notes/templates/learning_notes/topic.html
+++ b/learning_notes/templates/learning_notes/topic.html
@@ -1,28 +1,34 @@
 {% extends "learning_notes/base.html" %}
 
 {% block content %}
-    <h2 style="display: inline;">Topic: {{topic.text}}</h2>
-    {% if user.is_authenticated %}
-        <a href = "{% url 'learning_notes:new_entry' topic.id %}" class = "button add">Add New Entry</a>
-    {% endif %}
-    <ul>
-        {% for entry in entries %}
-            <li>
-                <p style="display: inline;"><b><font size="4">{{ entry.title}}</font></b></p> <!-- use display: inline to display buttons and title in one line -->
-                {% if user == entry.owner %}
-                    <a href="{% url 'learning_notes:edit_entry' topic.id entry.id%}" class = "button edit">Edit</a>
-                    <a href="{% url 'learning_notes:delete_entry' topic.id entry.id %}" class="button delete" onclick="return confirm('Are you sure to delete this entry?');" >Delete</a>
-                {% endif %}
-                <p>By: <a href = "{% url 'learning_notes:archive_user_topics' entry.owner.id %}"><i>{{entry.owner}}</i></a>&emsp;{{ entry.date_added|date:"M d, Y H:i" }}</p>
-                <div>{{ entry.text|linebreaks }}</div>
-            </li>
-        {% empty %}
-            <li>No entry has been added for this topic yet.</li>
-        {% endfor %}
-    </ul>
-    <br>
-    {% if user.is_authenticated %}
-        <a href = "{% url 'learning_notes:new_entry' topic.id %}" class = "button add">Add New Entry</a>
-    {% endif %}
+  <div class="container topic" id="top">
+    <div class="topic topline">
+      <div id="topicName" style="display: inline;">Topic: {{topic.text}}</div>
+      {% if user.is_authenticated %}
+         <div style="display: inline;"> 
+          <a href = "{% url 'learning_notes:new_entry' topic.id %}" class="btn btn-primary addNewEntry">Add New Entry</a>
+        </div>
+      {% endif %}
+    </div>
 
+    {% for entry in entries %}
+      <div class="card">
+        <div class="card-header">
+          By: <a class="entryOwner" href = "{% url 'learning_notes:archive_user_topics' entry.owner.id %}">{{entry.owner}}</a>{{ entry.date_added|date:"M d, Y H:i" }}
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">{{ entry.title}}</h5>
+          <p class="card-text">{{ entry.text|linebreaks }}</p>
+          {% if user == entry.owner %}
+            <a href="{% url 'learning_notes:edit_entry' topic.id entry.id%}" class="btn btn-warning">Edit</a>
+            <a href="{% url 'learning_notes:delete_entry' topic.id entry.id %}" class="btn btn-danger" onclick="return confirm('Are you sure to delete this entry?');" >Delete</a>
+          {% endif %}
+        </div>
+      </div>
+    {% empty %}
+      <p>No entry has been added for this topic yet.</p>
+    {% endfor %}
+
+    <a href="#top" class="toTop"><i class="fas fa-angle-up"></i> TOP</a>
+  </div>
 {% endblock content %}
