--- a/learning_notes/templates/learning_notes/archive_user_topics.html
+++ b/learning_notes/templates/learning_notes/archive_user_topics.html
@@ -1,14 +1,21 @@
 {% extends "learning_notes/base.html" %}
 
 {% block content %}
+  <div class="container topics">
     <h2>User: <i>{{archive_user.username}}</i></h2>
     <h3>Archived Topics:</h3>
-    <ul>
-        {% for topic in topics %}
-            <li><a href = "{% url 'learning_notes:archive_user_entries' archive_user.id topic.id%}">{{ topic.text }}</a></li>
-        {% empty %}
-            <li>No topic has been added yet.</li>
-        {% endfor %}
-    </ul>
-
+    <div class="list-group">
+      {% for topic in topics %}
+        <!-- Use button for the cursor hover effect and to include badge. Use location.href to make button function as an <a> tag -->
+        <button 
+          type="button"
+          class="list-group-item list-group-item-action d-flex justify-content-between align-items-center topicList"
+          onclick="location.href='{% url 'learning_notes:archive_user_entries' archive_user.id topic.id%}'">
+          {{ topic.text }}<span class="badge badge-primary badge-pill">{{ topic.count }}</span>
+        </button>
+      {% empty %}
+        <button type="button" class="list-group-item d-flex justify-content-between align-items-center topicList">No topic has been added yet.</button>
+      {% endfor %}
+    </div>
+  </div>
 {% endblock content %}
