new_topic.html beautify done

--- a/learning_notes/static/learning_notes/css/mystyle.css
+++ b/learning_notes/static/learning_notes/css/mystyle.css
@@ -74,3 +74,15 @@ a.toTop{
     font-size: 24px;
 }
 
+
+/*new_topic.html*/
+div.form-group.newTopic p{
+    margin-bottom: 0;
+}
+
+.topicForm{
+    font-size: 24px;
+}
+
+
+
