--- a/learning_notes/templates/learning_notes/new_topic.html
+++ b/learning_notes/templates/learning_notes/new_topic.html
@@ -1,15 +1,20 @@
 {% extends "learning_notes/base.html" %}
 
 {% block content %}
+  <div class="container newTopic">
     {% if topicAlreadyExist %}
         <p class = 'warning'>Topic "{{existingTopic.text}}" already exists. Please add a different topic, or post your notes under the existing "{{existingTopic.text}}" topic</p>
     {% endif %}
     <p><h3>Add a new topic:</h3></p>
     <form action = "{% url 'learning_notes:new_topic'%}" method = 'POST'>
         {% csrf_token %}
-        {{form.as_p}}
-        <input type = 'submit' class = 'button submit' value = 'Add Topic'>
-
-        <a href = "{% url 'learning_notes:topics' %}" class = "button cancel">Cancel</a> <!-- cancel button -->
+        <div class="form-group newTopic">
+          <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"> -->
+          {{form.as_p}}
+          <small id="newTopicExplain" class="form-text text-muted">Pick any topic you like. If a topic already exists, please post under the existing topic.</small>
+        </div>
+        <input type = 'submit' class = 'btn btn-primary' value = 'Add'>
+        <a href = "{% url 'learning_notes:topics' %}" class = "btn btn-secondary">Cancel</a> <!-- cancel button -->
     </form>
+  </div>
 {% endblock content %}
