TinyMce successfully installed and implemented. Now the entry input textarea becomes rich text and the display is rich text as well. Took me HOURS to figure these out. Two important tricks: 1. tinymce must be triggerSave() before form is submitted, 2. use 'safe' filter to allow direct html tag insertion to show rich format

--- a/learning_notes/templates/learning_notes/archive_user_entries.html
+++ b/learning_notes/templates/learning_notes/archive_user_entries.html
@@ -12,7 +12,7 @@
         </div>
         <div class="card-body">
           <h5 class="card-title">{{ entry.title}}</h5>
-          <p class="card-text">{{ entry.text|linebreaks }}</p>
+          <p class="card-text">{{ entry.text|safe }}</p>
           {% if user == entry.owner %}
             <a href="{% url 'learning_notes:edit_entry' topic.id entry.id%}" class="btn btn-warning">Edit</a>
             <a href="{% url 'learning_notes:delete_entry' topic.id entry.id %}" class="btn btn-danger" onclick="return confirm('Are you sure to delete this entry?');" >Delete</a>
