--- a/learning_notes/templates/learning_notes/new_entry.html
+++ b/learning_notes/templates/learning_notes/new_entry.html
@@ -1,13 +1,15 @@
 {% extends "learning_notes/base.html" %}
 
 {% block content %}
+<!--   <script>tinymce.triggerSave();</script> -->
   <div class="container newEntry">
     <p><h3>Topic: <a href = "{% url 'learning_notes:topic' topic.id %}">{{ topic.text }}</a></h3></p>
     <p>New Entry:</p>
     <form action = "{% url 'learning_notes:new_entry' topic.id %}" method = 'POST'>
         {% csrf_token %}
         {{form.as_p}}
-        <input type = 'submit' class = 'button submit' value = 'Add Entry'>
+        <!-- must call tinymce.triggerSave() before submitting the form -->
+        <input type = 'submit' class = 'button submit' value = 'Add Entry' onclick="tinymce.triggerSave()">
 
         <a href = "{% url 'learning_notes:topic' topic.id %}" class = "button cancel" >Cancel</a> <!-- cancel button -->
     </form>
