new_entry.html beautify done

--- a/learning_notes/templates/learning_notes/base.html
+++ b/learning_notes/templates/learning_notes/base.html
@@ -100,7 +100,7 @@
 
     <footer class="footer mt-auto py-3">
       <div class="footer container">
-        <span class="text-muted">&copy; Fanchen Bao 2018-2019. Powered By <a href="https://getbootstrap.com/docs/4.3/examples/jumbotron/">Bootstrap Jumbotron</a> and <a href="https://getbootstrap.com/docs/4.3/examples/sticky-footer/">Sticky Footer</a></span>
+        <span class="text-muted">&copy; Fanchen Bao 2018-2019. Powered By <a href="https://getbootstrap.com">Bootstrap</a> and <a href="https://django-tinymce.readthedocs.io/en/latest/">django-tinymce</a></span>
       </div>
     </footer>
 
