--- a/learning_notes/templates/learning_notes/edit_entry.html
+++ b/learning_notes/templates/learning_notes/edit_entry.html
@@ -1,15 +1,17 @@
 {% extends "learning_notes/base.html" %}
 
 {% block content %}
-    <p><a href = "{% url 'learning_notes:topic' topic.id %}">{{ topic.text }}</a></p> <!-- ink to go back to topic page -->
+  <div class="container editEntry">
+    <p><h3>Topic: <a href = "{% url 'learning_notes:topic' topic.id %}">{{ topic.text }}</a></h3></p> <!-- ink to go back to topic page -->
     <p>Edit entry:</p>
     <form action = "{% url 'learning_notes:edit_entry' topic.id entry.id %}" method = 'POST'>
         {% csrf_token %}
         {{form.as_p}}
-        <input type = 'submit' class = "button submit" value = 'Save Changes'>
+        <input type = 'submit' class = "btn btn-primary" value = 'Save Changes' onclick="tinymce.triggerSave()">
 
-        <a href = "{% url 'learning_notes:topic' topic.id %}" class = "button cancel" >Cancel</a> <!-- cancel button -->
+        <a href = "{% url 'learning_notes:topic' topic.id %}" class = "btn btn-secondary" >Cancel</a> <!-- cancel button -->
 
     </form>
+  </div>
 
 {% endblock content %}
