--- a/learning_notes/templates/learning_notes/new_entry.html
+++ b/learning_notes/templates/learning_notes/new_entry.html
@@ -9,9 +9,9 @@
         {% csrf_token %}
         {{form.as_p}}
         <!-- must call tinymce.triggerSave() before submitting the form -->
-        <input type = 'submit' class = 'button submit' value = 'Add Entry' onclick="tinymce.triggerSave()">
+        <input type = 'submit' class = 'btn btn-primary' value = 'Add Entry' onclick="tinymce.triggerSave()">
 
-        <a href = "{% url 'learning_notes:topic' topic.id %}" class = "button cancel" >Cancel</a> <!-- cancel button -->
+        <a href = "{% url 'learning_notes:topic' topic.id %}" class = "btn btn-secondary" >Cancel</a> <!-- cancel button -->
     </form>
   </div>
     
