--- a/learning_notes/templates/learning_notes/new_topic.html
+++ b/learning_notes/templates/learning_notes/new_topic.html
@@ -3,6 +3,9 @@
 {% block content %}
   <div class="container newTopic">
     {% if topicAlreadyExist %}
+      <div class="alert alert-warning" role="alert">
+        This is a warning alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+      </div>
         <p class = 'warning'>Topic "{{existingTopic.text}}" already exists. Please add a different topic, or post your notes under the existing "{{existingTopic.text}}" topic</p>
     {% endif %}
     <p><h3>Add a new topic:</h3></p>
