--- a/learning_notes/templates/learning_notes/new_topic.html
+++ b/learning_notes/templates/learning_notes/new_topic.html
@@ -4,9 +4,9 @@
   <div class="container newTopic">
     {% if topicAlreadyExist %}
       <div class="alert alert-warning" role="alert">
-        This is a warning alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+        Topic "{{existingTopic.text}}" already exists. Please add a different topic, or  <a href="{% url 'learning_notes:topic' existingTopic.id %}" class="alert-link">click here</a> to visit the existing topic.
       </div>
-        <p class = 'warning'>Topic "{{existingTopic.text}}" already exists. Please add a different topic, or post your notes under the existing "{{existingTopic.text}}" topic</p>
+        <p class = 'warning'></p>
     {% endif %}
     <p><h3>Add a new topic:</h3></p>
     <form action = "{% url 'learning_notes:new_topic'%}" method = 'POST'>
