login and register beautify completed

--- a/learning_notes/templates/learning_notes/archive_user_topics.html
+++ b/learning_notes/templates/learning_notes/archive_user_topics.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="container topics">
-    <h2>User: <i>{{archive_user.username}}</i></h2>
+    <h2>User: <em>{{archive_user.username}}</em></h2>
     <h3>Archived Topics:</h3>
     <div class="list-group">
       {% for topic in topics %}
