--- a/learning_notes/static/learning_notes/css/mystyle.css
+++ b/learning_notes/static/learning_notes/css/mystyle.css
@@ -8,7 +8,7 @@
 }
 
 .jumbotron{
-    background-color: rgba(204, 204, 204, 0.8);
+    background-color: rgba(242, 242, 242, 0.9);
 }
 
 .jumbo.container{
@@ -20,12 +20,12 @@
 .container.topics{
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
-    width: 25rem;
+    width: 40rem;
     font-size: 30px;
 }
 
 button.topicList{
-    background-color: rgba(204, 204, 204, 0.8);
+    background-color: rgba(242, 242, 242, 0.9);
     color: black;
     border: none;
 }
@@ -82,6 +82,29 @@ div.form-group.newTopic p{
 
 .topicForm{
     font-size: 24px;
+}
+
+/*login.html*/
+ul.errorlist.nonfield{
+    display: none;
+}
+
+.container.login{
+    margin-top: 3rem;
+    margin-left: 4rem;
+    width: 400px;
+    /*background-color: rgba(204, 204, 204, 0.9);*/
+    /*padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-radius: 5%;*/
+    float: left;
+}
+
+.container.register{
+    margin-top: 3rem;
+    width: 600px;
+    background-color: rgba(242, 242, 242, 0.9);
+    padding: 1rem;
 }
 
 
