--- a/learning_notes/templates/learning_notes/base.html
+++ b/learning_notes/templates/learning_notes/base.html
@@ -57,6 +57,8 @@
     <script src="https://cloud.tinymce.com/5/tinymce.min.js"></script>
     <script>tinymce.init({ selector:'textarea' });</script>
 
+    <script type="text/javascript" src="{% static "learning_notes/js/login.js" %}"></script>
+
   </head>
 
   <body class="d-flex flex-column h-100">
@@ -100,7 +102,7 @@
 
     <footer class="footer mt-auto py-3">
       <div class="footer container">
-        <span class="text-muted">&copy; Fanchen Bao 2018-2019. Powered By <a href="https://getbootstrap.com">Bootstrap</a> and <a href="https://django-tinymce.readthedocs.io/en/latest/">django-tinymce</a></span>
+        <span class="text-muted">&copy; Fanchen Bao 2018-2019. Powered By <a href="https://getbootstrap.com">Bootstrap</a>, <a href="https://django-tinymce.readthedocs.io/en/latest/">django-tinymce</a> and <a href="https://fontawesome.com/">Font Awesome</a></span>
       </div>
     </footer>
 
