--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,11 +1,13 @@
 {% extends "learning_notes/base.html" %}
 
 {% block content %}
+  <div class="container register">
     <form action = "{% url 'users:register' %}" method = 'POST'>
         {% csrf_token %}
         {{ form.as_p }}
-        <input type = 'submit' class = 'button submit' value = 'Register'>
+        <input type = 'submit' class = 'btn btn-primary' value = 'Register'>
 
-        <a href = "{% url 'learning_notes:index' %}" class = "button cancel">Cancel</a> <!-- cancel button -->
+        <a href = "{% url 'learning_notes:index' %}" class = "btn btn-secondary">Cancel</a> <!-- cancel button -->
     </form>
+  </div>
 {% endblock content %}
