--- a/learning_notes/static/learning_notes/css/mystyle.css
+++ b/learning_notes/static/learning_notes/css/mystyle.css
@@ -24,6 +24,13 @@
     font-size: 30px;
 }
 
+li.topicListHeader{
+    background-color: rgba(51, 51, 51, 0.9);
+    color: white;
+    border: none;
+    font-weight: bold;
+}
+
 button.topicList{
     background-color: rgba(242, 242, 242, 0.9);
     color: black;
@@ -31,9 +38,8 @@ button.topicList{
 }
 
 button.topicList:hover{
-    font-weight: bold;
-    background-color: rgba(51, 51, 51);
-    color: rgba(204, 204, 204);
+    background-color: rgba(89, 89, 89, 0.9);
+    color: white;
 }
 
 #addNewTopic{
@@ -65,9 +71,15 @@ button.topicList:hover{
     margin-bottom: 30px;
 }
 
+.card-header{
+    background-color: rgba(153, 153, 153, 0.9);
+    color: white;
+}
+
 a.entryOwner{
     margin-right: 10px;
     font-style: italic;
+    /*color: rgba(0, 255, 255);*/
 }
 
 a.toTop{
