--- a/learning_notes/templates/learning_notes/topics.html
+++ b/learning_notes/templates/learning_notes/topics.html
@@ -3,13 +3,17 @@
 {% block content %}
 <div class="container topics">
   <div class="list-group">
+    <li class="list-group-item d-flex justify-content-between align-items-center topicListHeader">
+      Topic Name
+      <span class="badge badge-info">Entries Count</span>
+    </li>
     {% for topic in topics %}
       <!-- Use button for the cursor hover effect and to include badge. Use location.href to make button function as an <a> tag -->
       <button 
         type="button"
         class="list-group-item list-group-item-action d-flex justify-content-between align-items-center topicList"
         onclick="location.href='{% url 'learning_notes:topic' topic.id %}'">
-        {{ topic.text }}<span class="badge badge-primary badge-pill">{{ topic.count }}</span>
+        {{ topic.text }}<span class="badge badge-info">{{ topic.count }}</span>
       </button>
     {% empty %}
       <button type="button" class="list-group-item d-flex justify-content-between align-items-center topicList">No topic has been added yet.</button>
