--- a/learning_notes/templates/learning_notes/archive_user_entries.html
+++ b/learning_notes/templates/learning_notes/archive_user_entries.html
@@ -12,7 +12,7 @@
         </div>
         <div class="card-body">
           <h5 class="card-title">{{ entry.title}}</h5>
-          <p class="card-text">{{ entry.text|safe }}</p>
+          <p class="card-text">{{ entry.text|safe|linebreaks }}</p>
           {% if user == entry.owner %}
             <a href="{% url 'learning_notes:edit_entry' topic.id entry.id%}" class="btn btn-warning btn-sm">Edit</a>
             <a href="{% url 'learning_notes:delete_entry' topic.id entry.id %}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure to delete this entry?');" >Delete</a>
