--- a/learning_notes/templates/learning_notes/base.html
+++ b/learning_notes/templates/learning_notes/base.html
@@ -104,7 +104,7 @@
 
     <footer class="footer mt-auto py-3">
       <div class="footer container">
-        <span class="text-muted">&copy; Fanchen Bao 2018-2019. Powered By <a href="https://getbootstrap.com">Bootstrap</a>, <a href="https://django-tinymce.readthedocs.io/en/latest/">django-tinymce</a> and <a href="https://fontawesome.com/">Font Awesome</a></span>
+        <span class="text-muted">&copy; Fanchen Bao 2018-2019. Powered By <a href="https://www.djangoproject.com/">Django</a>, <a href="https://getbootstrap.com">Bootstrap</a>, <a href="https://django-tinymce.readthedocs.io/en/latest/">django-tinymce</a> and <a href="https://fontawesome.com/">Font Awesome</a></span>
       </div>
     </footer>
 
